--- a/Python Lab.ipynb
+++ b/Python Lab.ipynb
@@ -52,7 +52,15 @@
     "    :param some_str: str\n",
     "    :return: dict\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE"
+    "    all_freq = {}
+
+    "    for i in some_str:
+    "        if i in all_freq:
+    "            all_freq[i] += 1
+    "        else:
+    "            all_freq[i] = 1
+    "    return all_freq
+    "
    ]
   },
   {
